--- a/src/PlyTracker.Console/PlyTracker.ConsoleApplication.csproj
+++ b/src/PlyTracker.Console/PlyTracker.ConsoleApplication.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlyTracker.InversionOfControl\PlyTracker.InversionOfControl.csproj" />
+  </ItemGroup>
+
 </Project>
