--- a/src/PlyTracker.Discord/PlyTracker.Discord.csproj
+++ b/src/PlyTracker.Discord/PlyTracker.Discord.csproj
@@ -5,12 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+    <PackageReference Include="Discord.Net" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PlyTracker.Core\PlyTracker.Core.csproj" />
-    <ProjectReference Include="..\PlyTracker.Discord\PlyTracker.Discord.csproj" />
   </ItemGroup>
 
 </Project>
